# speak-like-me

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-06-speak-like-me.md
src/slm/: cli.py  config.py  embedder.py  exceptions.py  ingest.py  retriever.py  rewriter.py  store.py
tests/: conftest.py  test_cli.py  test_config.py  test_embedder.py  test_exceptions.py  test_ingest.py  test_retriever.py  test_rewriter.py  test_store.py
tests/golden/: retrieval_golden.json
tests/live/: test_rewrite_live.py
