[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speak-like-me"
version = "0.1.0"
description = "Rewrite AI-generated text to match your personal writing style"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.15.0",
    "chromadb>=1.0.0",
    "onnxruntime>=1.21.0",
    "tokenizers>=0.21.0",
    "anthropic>=0.52.0",
    "tomli>=2.2.0; python_version < '3.11'",
    "tqdm>=4.67.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-recording>=0.13.0",
    "vcrpy>=7.0.0",
    "hypothesis>=6.122.0",
]

[project.scripts]
slm = "slm.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/slm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "live: tests that call real external APIs (deselect with '-m not live')",
]
